--- a/src/main/webapp/app/styles/main.scss
+++ b/src/main/webapp/app/styles/main.scss
@@ -26,3 +26,7 @@ $extended-footer-height: 70px;
 @import "common";
 @import "home";
 @import "map";
+
+.item-alarm {background-color: #e42112;}
+.item-warning {background-color: #ffc900}
+
