Home html and History.html

--- a/src/main/webapp/app/styles/main.scss
+++ b/src/main/webapp/app/styles/main.scss
@@ -29,4 +29,6 @@ $extended-footer-height: 70px;
 
 .item-alarm {background-color: #e42112;}
 .item-warning {background-color: #ffc900}
+.buttons {float:right}
+
 
