Color class for the botton of home page

--- a/src/main/webapp/app/styles/main.scss
+++ b/src/main/webapp/app/styles/main.scss
@@ -30,5 +30,8 @@ $extended-footer-height: 70px;
 .item-alarm {background-color: #e42112;}
 .item-warning {background-color: #ffc900}
 .buttons {float:right}
+.red-button {background: red;}
+.yellow-button {background: yellow;}
+.green-button {background: green;}
 
 
