New page Dashboard and (1 step of) restyling history and inbox

--- a/src/main/webapp/app/styles/main.scss
+++ b/src/main/webapp/app/styles/main.scss
@@ -33,3 +33,4 @@ $extended-footer-height: 70px;
 .red-button {background: red;}
 .yellow-button {background: yellow;}
 .green-button {background: green;}
+.col-center {text-align: center;}
