Mobile UI update.

--- a/src/main/webapp/app/styles/home.scss
+++ b/src/main/webapp/app/styles/home.scss
@@ -20,6 +20,10 @@
   background: rgba(255,255,255, 0.6);
  }
 
+ .img-center {
+  text-align: center;
+ }
+
  .card.col.home h1{text-align: center;}
  .card.col.home h2{text-align: left;}
 
