--- a/src/main/webapp/app/styles/main.css
+++ b/src/main/webapp/app/styles/main.css
@@ -9579,6 +9579,9 @@ img {
   border: 0;
   background: rgba(255, 255, 255, 0.6); }
 
+.img-center {
+  text-align: center; }
+
 .card.col.home h1 {
   text-align: center; }
 
@@ -9594,17 +9597,114 @@ img {
 .gmaps {
   height: 100%; }
 
+.login {
+  background: url(../../images/zeroHQT.jpg) no-repeat center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover; }
+
+/** For the task list header columns and tasks **/
+.flex-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  border: none;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex; }
+
+.wrap {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+@media (max-width: 320px) {
+  .flex-container.wrap > div {
+    width: 50%;
+    max-width: 50%;
+    text-overflow: '';
+    white-space: nowrap;
+    overflow: hidden; } }
+@media (min-width: 321px) {
+  .flex-container.wrap > div {
+    width: 33%;
+    max-width: 33%;
+    text-overflow: '';
+    white-space: nowrap;
+    overflow: hidden; } }
+@media (min-width: 480px) {
+  .flex-container.wrap > div {
+    width: 25%;
+    max-width: 25%;
+    text-overflow: '';
+    white-space: nowrap;
+    overflow: hidden; } }
+@media (min-width: 640px) {
+  .flex-container.wrap > div {
+    width: 20%;
+    max-width: 20%;
+    text-overflow: '';
+    white-space: nowrap;
+    overflow: hidden; } }
+@media (min-width: 960px) {
+  .flex-container.wrap > div {
+    width: 15%;
+    max-width: 15%;
+    text-overflow: '';
+    white-space: nowrap;
+    overflow: hidden; } }
+.low-pad-item {
+  padding: 0;
+  margin: 0; }
+
+.col-header {
+  font-weight: bold; }
+
+.column {
+  text-overflow: '';
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 87%;
+  float: left;
+  padding: 2px 5px; }
+
+.col-header > .column {
+  padding: 5px 5px; }
+
+.underlined {
+  text-decoration: underline; }
+
+.column-sort {
+  min-width: 13%;
+  float: right;
+  text-align: right;
+  padding-right: 2px; }
+
+.item-alarm {
+  background-color: #e42112; }
+
+.item-warning {
+  background-color: #ffc900; }
+
+.buttons {
+  float: right; }
+
+.red-button {
+  background: red; }
+
+.yellow-button {
+  background: yellow; }
+
+.green-button {
+  background: green; }
+
+.col-center {
+  text-align: center; }
+
+.item {
+  border-style: none; }
+
 /*# sourceMappingURL=main.css.map */
-
-
-.item-alarm {background-color: #e42112;}
-.item-warning {background-color: #ffc900}
-
-.buttons {float:right}
-
-.red-button {background: red;}
-.yellow-button {background: yellow;}
-.green-button {background: green;}
-
-
-.col-center {text-align: center;}
