--- a/src/main/webapp/app/styles/login.scss
+++ b/src/main/webapp/app/styles/login.scss
@@ -1,6 +1,7 @@
 .login {
-  background: url(../../images/zeroHQT.jpg) no-repeat center fixed;
+  background: url(../../images/zeroHQTest.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
