--- a/src/main/webapp/app/styles/main.scss
+++ b/src/main/webapp/app/styles/main.scss
@@ -38,3 +38,11 @@ $extended-footer-height: 70px;
 .green-button {background: green;}
 .col-center {text-align: center;}
 .item {border-style: none;}
+
+.red {
+  color: #942a25;
+};
+
+.yellow {
+  color: #e3bc08;
+};
