--- a/src/main/webapp/app/styles/main.css
+++ b/src/main/webapp/app/styles/main.css
@@ -9588,6 +9588,35 @@ img {
 .card.col.home h2 {
   text-align: left; }
 
+/* portrait */
+@media screen and (orientation: portrait) {
+  .examle03FlexContainer {
+    display: flex;
+    flex-direction: column;
+    height: 100%; }
+
+  .example03FlexItems {
+    flex: 1 1 auto; } }
+/* landscape */
+@media screen and (orientation: landscape) {
+  .examle03FlexContainer {
+    display: flex;
+    flex-direction: row;
+    height: 100%; }
+
+  .example03FlexItems {
+    flex: 1 1 auto; } }
+.border01 {
+  border: 4px solid #bb1515; }
+
+.back03 {
+  background-color: #433e90;
+  color: #c0c0c0; }
+
+.back04 {
+  background-color: #2a334f;
+  color: white; }
+
 /*
  * Map
  */
@@ -9598,9 +9627,10 @@ img {
   height: 100%; }
 
 .login {
-  background: url(../../images/zeroHQT.jpg) no-repeat center fixed;
+  background: url(../../images/zeroHQTest.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover; }
 
 /** For the task list header columns and tasks **/
@@ -9706,5 +9736,11 @@ img {
 
 .item {
   border-style: none; }
+
+.red {
+  color: #942a25; }
+
+.yellow {
+  color: #C6E746; }
 
 /*# sourceMappingURL=main.css.map */
