--- a/src/main/webapp/app/styles/home.scss
+++ b/src/main/webapp/app/styles/home.scss
@@ -1,71 +1,58 @@
-
 /*
  * Home
  */
- .home-hello{
-   position:relative;
- }
+.home-hello {
+  position: relative;
+}
 
- .home img{
-   display: inherit;
- }
+.home img {
+  display: inherit;
+}
 
- .home-hello .item{
-   position: absolute;
+.home-hello .item {
+  position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
   margin: 0;
   border: 0;
-  background: rgba(255,255,255, 0.6);
- }
-
- .img-center {
-  text-align: center;
- }
-
- .card.col.home h1{text-align: center;}
- .card.col.home h2{text-align: left;}
-
-
-
-/* portrait */
-@media screen and (orientation:portrait) {
- .examle03FlexContainer {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
- }
-
- .example03FlexItems {
-  flex: 1 1 auto;
- }
+  background: rgba(255, 255, 255, 0.6);
 }
 
-/* landscape */
-@media screen and (orientation:landscape) {
- .examle03FlexContainer {
-  display: flex;
-  flex-direction: row;
-  height: 100%;
- }
+.img-center {
+  text-align: center;
+}
 
- .example03FlexItems {
-  flex: 1 1 auto;
- }
+.card.col.home h1 {
+  text-align: center;
+}
+
+.card.col.home h2 {
+  text-align: left;
 }
 
 .border01 {
- border: 4px solid #bb1515;
+  border: 4px solid #bb1515;
 }
 
 .back03 {
- background-color: #433e90;
- color: #c0c0c0;
+  background-color: #433e90;
+  color: #c0c0c0;
 }
 
 .back04 {
- background-color: #2a334f;
- color: white;
+  background-color: #2a334f;
+  color: white;
 }
 
+.bottom-low {
+  padding-top: 10%;
+}
+
+.bottom-medium {
+  padding-top: 20%;
+}
+
+.bottom-high {
+  padding-top: 40%;
+}
