Added functionality to log user access with included access browser.

--- a/src/main/webapp/app/styles/main.css
+++ b/src/main/webapp/app/styles/main.css
@@ -9732,10 +9732,10 @@ img {
   border-style: none; }
 
 .red {
-  color: #942a25; }
+  color: red; }
 
 .yellow {
-  color: #e3bc08; }
+  color: #ffc900; }
 
 .notification-style-text {
   margin-left: 2%;
