--- a/src/main/webapp/app/styles/main.scss
+++ b/src/main/webapp/app/styles/main.scss
@@ -44,11 +44,11 @@ $extended-footer-height: 70px;
 .item {border-style: none;}
 
 .red {
-  color: #942a25;
+  color: red;
 };
 
 .yellow {
-  color: #e3bc08;
+  color: #ffc900;
 };
 
 
