--- a/src/main/webapp/app/styles/home.scss
+++ b/src/main/webapp/app/styles/home.scss
@@ -56,3 +56,18 @@
 .bottom-high {
   padding-top: 40%;
 }
+
+.card-header-zero {
+  font-size: 20px;
+}
+
+.spinner-zero {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+
+  align-items: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+
+}
