--- a/src/main/webapp/app/styles/login.scss
+++ b/src/main/webapp/app/styles/login.scss
@@ -1,7 +1,22 @@
-.login {
-  background: url(../../images/zeroHQTest.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+.login-container {
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
+  height: 100%;
+  // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#efad62), color-stop(100%,#f7d47c));
+  // background: -webkit-linear-gradient(top, #efad62 0%,#f7d47c 100%);
+}
+
+.img-header {
+  max-width: 50%;
+}
+
+@media all and (min-height: 600px) {
+  .login-container > .col-zero {
+    padding-top: 10%;
+  }
+}
+
+.login-container > .header {
+  -webkit-flex: 4;
+  padding-top: 20px;
 }
