Various bugfix in mobile applications.

--- a/src/main/mobile/app/styles/main.scss
+++ b/src/main/mobile/app/styles/main.scss
@@ -28,6 +28,8 @@ $extended-footer-height: 70px;
 @import "map";
 @import "login";
 @import "dashboard";
+@import "history";
+
 
 @import url('../fonts/Roboto-Regular.ttf');
 $font-family-base: 'Roboto', serif;
